alignment & image changes

--- a/src/app/components/cater/cater.component.scss
+++ b/src/app/components/cater/cater.component.scss
@@ -14,6 +14,7 @@
         font-size: 14px;
         font-weight: 400;
         margin-top: 20px;
+        color: #5F5F5F;
     }
     .v1 { 
         border-left: 1px solid #707070;
@@ -68,7 +69,7 @@
     }
     .list{
         margin-left: 20px;
-        color: #6C6C6C;
+        color: #5F5F5F;
         font-size: 14px;
         text-align: left;
         font-weight: 300;
@@ -97,6 +98,7 @@
         font-size: 14px;
         font-weight: 400;
         text-align: justify;
+        color: #5F5F5F;
     }
     .step-image img{
         width: 100%;
@@ -125,6 +127,7 @@
         font-size: 14px;
         font-weight: 400;
         text-align: justify;
+        color: #5F5F5F;
     }
     .btn{
         background-color: #000;
@@ -156,6 +159,7 @@
         font-size: 14px;
         font-weight: 400;
         text-align: justify;
+        color: #5F5F5F;
     }
     .step-image img{
         width: 100%;
@@ -186,6 +190,7 @@
         font-size: 14px;
         font-weight: 400;
         text-align: justify;
+        color: #5F5F5F;
     }
     .step-image img{
         width: 100%;
@@ -211,6 +216,7 @@
         font-size: 14px;
         font-weight: 400;
         text-align: justify;
+        color: #5F5F5F;
     }
     .btn{
         background-color: #000;
@@ -239,6 +245,7 @@
         font-size: 14px;
         font-weight: 400;
         text-align: justify;
+        color: #5F5F5F;
     }
     .btn{
         background-color: #000;
@@ -271,6 +278,7 @@
         font-size: 14px;
         font-weight: 400;
         text-align: center;
+        color: #5F5F5F;
     }
     .bttn{
         text-align: center;
