--- a/src/app/components/projects/event-management/event-management.component.scss
+++ b/src/app/components/projects/event-management/event-management.component.scss
@@ -172,6 +172,9 @@ p{
     .col-md-2{
         width: 30%;
     }
+    .mb-5{
+        margin-bottom: 1rem !important;
+    }
 }
 }
 
@@ -235,6 +238,9 @@ p{
     }
     .col-md-2{
         width: 30%;
+    }
+    .mb-5{
+        margin-bottom: 1rem !important;
     }
 }
 }
