--- a/src/app/components/projects/health-care/health-care.component.scss
+++ b/src/app/components/projects/health-care/health-care.component.scss
@@ -121,6 +121,9 @@
     .col-md-2{
         width: 30%;
     }
+    .mb-5{
+        margin-bottom: 1rem !important;
+    }
 }
 }
 
@@ -184,6 +187,9 @@
     }
     .col-md-2{
         width: 30%;
+    }
+    .mb-5{
+        margin-bottom: 1rem !important;
     }
 }
 }
