--- a/src/app/components/services/usability-testing/usability-testing.component.html
+++ b/src/app/components/services/usability-testing/usability-testing.component.html
@@ -84,16 +84,16 @@
     <div class="row">
       <!-- <div class="col-md-1"></div> -->
       <div class="col-md-3">
-        <h3><img src="/assets/images/services/usability-testing/icon-1.svg" /><span>Understanding Product</span></h3>
+        <h3><img src="/assets/images/services/usability-testing/img-11.svg" /><span class="list1">Understanding Product</span></h3>
       </div>
       <div class="col-md-3">
-        <h3><img src="/assets/images/services/usability-testing/icon-2.svg" /><span>User Scenario</span></h3>
+        <h3><img src="/assets/images/services/usability-testing/img-22.svg" /><span>User Scenario</span></h3>
       </div>
       <div class="col-md-3">
-        <h3><img src="/assets/images/services/usability-testing/icon-3.svg" /><span>Understanding Behaviour</span></h3>
+        <h3><img src="/assets/images/services/usability-testing/img-33.svg" /><span>Understanding Behaviour</span></h3>
       </div>
       <div class="col-md-3">
-        <h3><img src="/assets/images/services/usability-testing/icon-4.svg" /><span>Report</span></h3>
+        <h3><img src="/assets/images/services/usability-testing/img-44.svg" /><span>Report</span></h3>
       </div>
       <!-- <div class="col-md-1"></div> -->
     </div>
@@ -158,13 +158,42 @@
       <div class="row">
         <div class="col-md-2">
           <img src="/assets/images/services/usability-testing/img-1.svg" />
+          <img class="line-2" src="/assets/images/services/usability-testing/line-2.svg" />
+          <img src="/assets/images/services/usability-testing/img-2.svg" />
+          <img class="line-2" src="/assets/images/services/usability-testing/line-2.svg" />
+          <img src="/assets/images/services/usability-testing/img-3.svg" />
+          <img class="line-2" src="/assets/images/services/usability-testing/line-2.svg" />
+          <img src="/assets/images/services/usability-testing/img-4.svg" />
+          <img class="line-2" src="/assets/images/services/usability-testing/line-2.svg" />
+          <img src="/assets/images/services/usability-testing/img-5.svg" />
+          <img class="line-2" src="/assets/images/services/usability-testing/line-2.svg" />
+          <img src="/assets/images/services/usability-testing/img-6.svg" />
+        </div>
+        <div class="col-md-10">
+          <h3>Prepare Tasks</h3>
+          <p>We choose the right framework to suite</p>
+          <h3>Recuit The Users</h3>
+          <p>We choose the right framework to suite</p>
+          <h3>Performing Tasks By The User</h3>
+          <p>We choose the right framework to suite</p>
+          <h3>Analysis</h3>
+          <p>We choose the right framework to suite</p>
+          <h3>Test Report</h3>
+          <p>We choose the right framework to suite</p>
+          <h3>Recommendation Based On Results</h3>
+          <p>We choose the right framework to suite</p>
+        </div>
+      </div>
+      <!-- <div class="row">
+        <div class="col-md-2">
+          <img src="/assets/images/services/usability-testing/img-1.svg" />
         </div>
         <div class="col-md-10">
           <h3>Prepare Tasks</h3>
           <p>We choose the right framework to suite</p>
         </div>
-      </div>
-      <div class="row">
+      </div> -->
+      <!-- <div class="row">
         <div class="col-md-2">
           <img src="/assets/images/services/usability-testing/img-2.svg" />
         </div>
@@ -172,8 +201,8 @@
           <h3>Recuit The Users</h3>
           <p>We choose the right framework to suite</p>
         </div>
-      </div>
-      <div class="row">
+      </div> -->
+      <!-- <div class="row">
         <div class="col-md-2">
           <img src="/assets/images/services/usability-testing/img-3.svg" />
         </div>
@@ -181,8 +210,8 @@
           <h3>Performing Tasks By The User</h3>
           <p>We choose the right framework to suite</p>
         </div>
-      </div>
-      <div class="row">
+      </div> -->
+      <!-- <div class="row">
         <div class="col-md-2">
           <img src="/assets/images/services/usability-testing/img-4.svg" />
         </div>
@@ -190,8 +219,8 @@
           <h3>Analysis</h3>
           <p>We choose the right framework to suite</p>
         </div>
-      </div>
-      <div class="row">
+      </div> -->
+      <!-- <div class="row">
         <div class="col-md-2">
           <img src="/assets/images/services/usability-testing/img-5.svg" />
         </div>
@@ -199,8 +228,8 @@
           <h3>Test Report</h3>
           <p>We choose the right framework to suite</p>
         </div>
-      </div>
-      <div class="row">
+      </div> -->
+      <!-- <div class="row">
         <div class="col-md-2">
           <img src="/assets/images/services/usability-testing/img-6.svg" />
         </div>
@@ -208,7 +237,7 @@
           <h3>Recommendation Based On Results</h3>
           <p>We choose the right framework to suite</p>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
