--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -63,31 +63,31 @@
       </div>
       <div class="row list-icons">
         <div class="col-md-2">
-            <img src="/assets/images/services/interface-design/vdicon1.png" alt="" />
+            <img src="/assets/images/services/interface-design/icon-1.svg" alt="" />
             <p>Mood Board</p>
         </div>
         <div class="col-md-2">
-            <img src="/assets/images/services/interface-design/vdicon2.png" alt="" />
+            <img src="/assets/images/services/interface-design/icon-2.svg" alt="" />
             <p>Colors & Typography</p>
         </div>
         <div class="col-md-1">
-            <img src="/assets/images/services/interface-design/vdicon3.png" alt="" />
+            <img src="/assets/images/services/interface-design/icon-3.svg" alt="" />
             <p>Iconography</p>
         </div>
         <div class="col-md-2">
-            <img src="/assets/images/services/interface-design/vdicon4.png" alt="" />
+            <img src="/assets/images/services/interface-design/icon-4.svg" alt="" />
             <p>User Interface</p>
         </div>
         <div class="col-md-2">
-            <img src="/assets/images/services/interface-design/vdicon5.png" alt="" />
+            <img src="/assets/images/services/interface-design/icon-5.svg" alt="" />
             <p>Layout & Style Guide</p>
         </div>
         <div class="col-md-1">
-            <img src="/assets/images/services/interface-design/vdicon6.png" alt="" />
+            <img src="/assets/images/services/interface-design/icon-6.svg" alt="" />
             <p>Illustrations</p>
         </div>
         <div class="col-md-2">
-            <img src="/assets/images/services/interface-design/vdicon7.png" alt="" />
+            <img src="/assets/images/services/interface-design/icon-7.svg" alt="" />
             <p>Branding & Logos</p>
         </div>
       </div>
