--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -60,7 +60,7 @@
             </div>
           </h2>
         </div>
-        <h1>through Design</h1>
+        <h1 class="wow fadeInUp" data-wow-delay="0.6s">through Design</h1>
         <div class="step-image">
           <img src="/assets/images/sample/line.svg" />
         </div>
@@ -91,7 +91,7 @@
             <img src="/assets/images/sample/ui.svg" />
             <p>UI DEVELOPMENT</p>
           </div>
-          <div class="col-md-3 tab-link" routerLink="/services/end-to-end">
+          <div class="col-md-2 tab-link" routerLink="/services/end-to-end">
             <img src="/assets/images/sample/ee.svg" />
             <p>END TO END DEVELOPMENT</p>
           </div>
@@ -99,7 +99,7 @@
             <img src="/assets/images/sample/ut.svg" />
             <p>USABILITY TESTING</p>
           </div>
-          <!-- <div class="col-md-1"></div> -->
+          <div class="col-md-1"></div>
     </div>
   </div>
 </section>
