--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -26,6 +26,21 @@
                 height: auto;
             }
         }
+        
+        .my-element {
+            display: inline-block;
+            margin: 0 0.5rem;
+          
+            animation: bounce; /* referring directly to the animation's @keyframe declaration */
+            animation-duration: 2s; /* don't forget to set a duration! */
+          }
+          .animate__animated.animate__bounce {
+            --animate-duration: 2s;
+          }
+          :root {
+            --animate-duration: 800ms;
+            --animate-delay: 0.9s;
+          }
         h1{
             font-size: 34px;
             font-weight: 400;
