--- a/src/app/components/projects/networking/networking.component.html
+++ b/src/app/components/projects/networking/networking.component.html
@@ -126,7 +126,7 @@
               <!-- </div> -->
             </div>
             <div class="strategy">
-              <div class="container">
+              <!-- <div class="container"> -->
                 <div class="row">
                   <div class="col-md-5">
                     <h5>Our strategy</h5>
@@ -177,7 +177,7 @@
                 </div>
                   </div>
                 </div>
-              </div>
+              <!-- </div> -->
             </div>
              <h2>DESIGN PROCESS</h2>
            <div class="row design-process">
