--- a/src/app/components/services/back-end-development/back-end-development.component.scss
+++ b/src/app/components/services/back-end-development/back-end-development.component.scss
@@ -116,10 +116,10 @@ p{
     h3{
         margin-top: 150px;
         text-align: center;
-        img{
-            width: 20%;
-            height: 30px;
-        }
+        // img{
+        //     width: 20%;
+        //     height: 30px;
+        // }
         span{
             font-size: 14px;
             font-weight: 300;
@@ -253,18 +253,20 @@ p{
             font-size: 13px;
             font-weight: 300;
             text-align: justify;
+            margin-top: 10px;
         }
         h3{
-            margin-top: 30px;
+            margin-top: 10px;
             text-align: left;
-            img{
-                width: 20%;
-                height: 30px;
-            }
+            margin-bottom: 20px;
+            // img{
+            //     width: 20%;
+            //     height: 30px;
+            // }
             span{
                 font-size: 13px;
                 font-weight: 300;
-                margin-left: 10px;
+                margin-left: 20px;
             }
         }
     }
