--- a/src/app/components/services/front-end-development/development.component.html
+++ b/src/app/components/services/front-end-development/development.component.html
@@ -39,19 +39,19 @@
       <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-3">
-          <h3><img src="/assets/images/services/ui-dev/icon-1.svg" /><span>Understanding Business</span></h3>
+          <h3 class="img1"><img src="/assets/images/services/ui-dev/icon-1.svg" /><span class="list">Understanding Business</span></h3>
         </div>
         <div class="col-md-2">
-          <h3><img src="/assets/images/services/ui-dev/icon-2.svg" /><span>Platform</span></h3>
+          <h3 class="img2"><img src="/assets/images/services/ui-dev/icon-2.svg" /><span class="list">Platform</span></h3>
         </div>
         <div class="col-md-2">
-          <h3><img src="/assets/images/services/ui-dev/icon-3.svg" /><span>Framework</span></h3>
+          <h3 class="img3"><img src="/assets/images/services/ui-dev/icon-3.svg" /><span class="list">Framework</span></h3>
         </div>
         <div class="col-md-2">
-          <h3><img src="/assets/images/services/ui-dev/icon-4.svg" /><span>Manage</span></h3>
+          <h3 class="img4"><img src="/assets/images/services/ui-dev/icon-4.svg" /><span class="list">Manage</span></h3>
         </div>
         <div class="col-md-2">
-          <h3><img src="/assets/images/services/ui-dev/icon-5.svg" /><span>Testing</span></h3>
+          <h3 class="img5"><img src="/assets/images/services/ui-dev/icon-5.svg" /><span class="list">Testing</span></h3>
         </div>
         <!-- <div class="col-md-1"></div> -->
       </div>
