--- a/src/app/components/services/visual-design/visual-design.component.scss
+++ b/src/app/components/services/visual-design/visual-design.component.scss
@@ -44,16 +44,26 @@ h5{
     .list-icons{
         margin-top: 150px;
         text-align: center;
-        img{
-            width: 30%;
-            height: 30px;
-        }
+        // img{
+        //     width: 30%;
+        //     height: 30px;
+        // }
         p{
             font-size: 14px;
             font-weight: 300;
             margin-top: 10px;
         }
     }
+    // .col-md-2{
+    //     padding-left: 0px;
+    //     padding-right: 0px;
+    //     // width: 80%;
+    // }
+    // .col-md-1{
+    //     padding-left: 20px;
+    //     padding-right: 20px;
+    //     // width: 80%;
+    // }
 }
 
 // .searvice-jumbotron{
@@ -360,7 +370,7 @@ h5{
     }
     .interface{
         margin-top: 60px;
-        margin-bottom: 60px;
+        margin-bottom: 30px;
         h1{
             font-size: 35px;
             font-weight: 400;
@@ -377,9 +387,10 @@ h5{
             font-size: 13px;
             font-weight: 300;
             text-align: justify;
+            margin-top: 10px;
         }
         .list-icons{
-            margin-top: 30px;
+            margin-top: 20px;
             text-align: left;
             img{
                 width: auto;
