alignment & image changes

--- a/src/app/components/services/visual-design/visual-design.component.scss
+++ b/src/app/components/services/visual-design/visual-design.component.scss
@@ -44,10 +44,10 @@ h5{
     .list-icons{
         margin-top: 150px;
         text-align: center;
-        // img{
-        //     width: 30%;
-        //     height: 30px;
-        // }
+        img{
+            width: auto;
+            height: 30px;
+        }
         p{
             font-size: 14px;
             font-weight: 300;
