--- a/src/app/components/cater/cater.component.html
+++ b/src/app/components/cater/cater.component.html
@@ -82,19 +82,19 @@
       <div class="container">
             <div class="row">
                   <div class="col-md-12">
-                        <h1>PRODUCT DEVELOPMENT</h1>
+                        <h1>PRODUCT DEVELOPMENT STRATEGY</h1>
                   </div>
             </div>
+            <br>
             <div class="row">
                   <div class="col-md-5">
-                        <h2>Product Development Strategy</h2>
+                        
                         <p>The key for a Product Development is understand the market, deep Research brings key Insights for 
                               product development. Urban & Hauser outline a range of new product development strategies 
                               companies should consider. They are classified as Reactive or Proactive, depending on how a 
                               company handles pressures from the market and how it decides to use external and internal sources 
                               of product development.
                         </p>
-                        <h2>Product Development Process</h2>
                         <ul class="list">
                               <li><p>Selecting the Target Group</p></li>
                               <li><p>Conducting Market Research</p></li>
@@ -105,6 +105,7 @@
                               <li><p>Usability Testing</p></li>
                               <li><p>Design Refinement</p></li>
                         </ul>
+                        <br>
                         <div class="btn">View Case Study</div>
                   </div>
                   <div class="col-md-1"></div>
@@ -200,7 +201,7 @@
                   </div>
                   <div class="col-md-1"></div>
                   <div class="col-md-5">
-                        <h2>INCREASE YOUR BUSINESS SALES</h2>
+                        <h2>Improve your Business Reach</h2>
                         <p>Mobile Apps have the potential to increase the business productivity multifold by being in the field.
                               Helps your product to reach masses and plays a critical role for reaching the customers.
                         </p>
@@ -239,7 +240,6 @@
                               the key Stakeholders of the business. Our consultants work as a true extension of the internal teams to bring 
                               the key changes required in designing the application which acts as the backbone of the Core Business.   
                         </p>
-                        <h2>The Design Process</h2>
                         <ul class="list">
                               <li><p>Deep dive to understand the Business Domain</p></li>
                               <li><p>Breakdown the complexities</p></li>
@@ -267,11 +267,9 @@
             </div>
             <div class="row">
                   <div class="col-md-5">
-                        <h2>Requirement Gathering</h2>
                         <p>We discuss with the stakeholders to set the pitch and get the inputs of target audience to focus on customer engagement 
                               and conversion.
                         </p>
-                        <h2>The Design Process</h2>
                         <ul class="list">
                               <li><p>Existing portal analytics</p></li>
                               <li><p>Competitor Analysis</p></li>
