--- a/src/app/components/cater/cater.component.html
+++ b/src/app/components/cater/cater.component.html
@@ -45,14 +45,14 @@
                   <div class="col-md-1"></div>
                   <div class="col-md-5">
                         <h2>Advantages of Digital Transformation</h2>
-                        <ul class="list">
-                              <li><p>Achieve customer adoption of digital customer journeys</p></li>
-                              <li><p>Design and digitise customer journeys</p></li>
-                              <li><p>Faster delivery</p></li>
-                              <li><p>Deeper Customer Insights</p></li>
-                              <li><p>Better Customer Experience</p></li>
-                              <li><p>Opening the Door to Globalization</p></li>
-                        </ul>
+                        <div class="list">
+                              <h3><img src="/assets/images/cater/path.svg" />Achieve customer adoption of digital customer journeys</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Design and digitise customer journeys</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Faster delivery</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Deeper Customer Insights</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Better Customer Experience</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Opening the Door to Globalization</h3>
+                        </div>
                   </div>
             </div>
             <div class="row">
@@ -95,16 +95,16 @@
                               of product development.
                         </p>
                         <h2>Product Development Process</h2>
-                        <ul class="list">
-                              <li><p>Selecting the Target Group</p></li>
-                              <li><p>Conducting Market Research</p></li>
-                              <li><p>Data Synthesis</p></li>
-                              <li><p>Ideation & Conceptualisation</p></li>
-                              <li><p>Wireframes</p></li>
-                              <li><p>Interaction Design</p></li>
-                              <li><p>Usability Testing</p></li>
-                              <li><p>Design Refinement</p></li>
-                        </ul>
+                        <div class="list">
+                              <h3><img src="/assets/images/cater/path.svg" />Selecting the Target Group</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Conducting Market Research</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Data Synthesis</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Ideation & Conceptualisation</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Wireframes</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Interaction Design</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Usability Testing</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Design Refinement</h3>
+                        </div>
                         <div class="btn">View Case Study</div>
                   </div>
                   <div class="col-md-1"></div>
@@ -131,13 +131,13 @@
                               requirement gathering happens in a series of iteration for better refinement and alignment of 
                               goals and realistic road map.
                         </p>
-                        <ul class="list">
-                              <li><p>Understanding the Goals</p></li>
-                              <li><p>Ideation</p></li>
-                              <li><p>Solution Divergence (thinking out of the box)</p></li>
-                              <li><p>Solution Convergence (adding constraints and bringing to reality)</p></li>                                    <li><p>Setting the Road map</p></li>
-                        </ul>
-                        
+                        <div class="list">
+                              <h3><img src="/assets/images/cater/path.svg" />Understanding the Goals</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Ideation</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Solution Divergence (thinking out of the box)</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Solution Convergence (adding constraints and bringing to reality)</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Setting the Road map</h3>
+                        </div>
                   </div>
                   <div class="col-md-1"></div>
                   <div class="col-md-5">
@@ -153,11 +153,11 @@
                         <p>Design Sprints have been used by product leaders in companies like Uber, Slack, Google and Twitter 
                               to solve problems and build better products. It is an ultimate tool for 
                         </p>
-                        <ul class="list">
-                              <li><p>developing a hypothesis</p></li>
-                              <li><p>prototyping an idea</p></li>
-                              <li><p>rapid testing</p></li>
-                        </ul>
+                        <div class="list">
+                              <h3><img src="/assets/images/cater/path.svg" />Developing a hypothesis</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Prototyping an idea</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Rapid testing</h3>
+                        </div>
                         <p>with as little investment as possible in a the actual market.</p>
 
                         <p>Design Sprints brings together cross-functional team to explore ideas from 360 degree with the 
@@ -165,11 +165,11 @@
                               and iterate based on real customer feedback. The successive sprints are planned help in increasing 
                               the customer base and also in retaining existing customer.
                         </p>
-                        <ul class="list">
-                              <li><p>Colloborate</p></li>
-                              <li><p>Innovate</p></li> 
-                              <li><p>Accelerate</p></li>
-                        </ul>
+                        <div class="list">
+                              <h3><img src="/assets/images/cater/path.svg" />Colloborate</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Innovate</h3> 
+                              <h3><img src="/assets/images/cater/path.svg" />Accelerate</h3>
+                        </div>
                         
                         <div class="btn">View Case Study</div>
                   </div>
@@ -240,13 +240,13 @@
                               the key changes required in designing the application which acts as the backbone of the Core Business.   
                         </p>
                         <h2>The Design Process</h2>
-                        <ul class="list">
-                              <li><p>Deep dive to understand the Business Domain</p></li>
-                              <li><p>Breakdown the complexities</p></li>
-                              <li><p>Build the key component wireframes</p></li>
-                              <li><p>Iterate with end users and businesss</p></li>
-                              <li><p>Finalise the clickable prototype for development</p></li>
-                        </ul>
+                        <div class="list">
+                              <h3><img src="/assets/images/cater/path.svg" />Deep dive to understand the Business Domain</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Breakdown the complexities</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Build the key component wireframes</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Iterate with end users and businesss</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Finalise the clickable prototype for development</h3>
+                        </div>
                   </div>
                   <div class="col-md-1"></div>
                   <div class="col-md-6">
@@ -272,16 +272,16 @@
                               and conversion.
                         </p>
                         <h2>The Design Process</h2>
-                        <ul class="list">
-                              <li><p>Existing portal analytics</p></li>
-                              <li><p>Competitor Analysis</p></li>
-                              <li><p>Key conversion factors</p></li>
-                              <li><p>Content Strategy</p></li>
-                              <li><p>Navigation Model</p></li>
-                              <li><p>High Level Sketches</p></li>
-                              <li><p>Refinement Iteration</p></li>
-                              <li><p>Tested & Iterated Web Design</p></li>
-                        </ul>
+                        <div class="list">
+                              <h3><img src="/assets/images/cater/path.svg" />Existing portal analytics</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Competitor Analysis</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Key conversion factors</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Content Strategy</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Navigation Model</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />High Level Sketches</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Refinement Iteration</h3>
+                              <h3><img src="/assets/images/cater/path.svg" />Tested & Iterated Web Design</h3>
+                        </div>
                   </div>
                   <div class="col-md-1"></div>
                   <div class="col-md-6">
