--- a/src/app/components/cater/cater.component.scss
+++ b/src/app/components/cater/cater.component.scss
@@ -83,11 +83,12 @@
     padding-bottom: 50px;
     background-color: #EFEFEF;
     .row{
-        margin-bottom: 50px;
+        margin-bottom: 40px;
     }
     h1{
         font-size: 34px;
         font-weight: 400;
+        margin-bottom: -20px;
     }
     h2{
         font-size: 20px;
@@ -100,6 +101,19 @@
         text-align: justify;
         color: #5F5F5F;
     }
+    .list{
+        margin-top: 15px;
+        margin-bottom: 10px;
+    h3{
+        font-size: 14px;
+        font-weight: 400;
+        color: #5F5F5F;
+        img{
+            width: 4%;
+            margin-right: 10px;
+        }
+    }
+}
     .step-image img{
         width: 100%;
         height: auto;
@@ -121,7 +135,7 @@
         font-size: 20px;
         font-weight: 400;
         margin-bottom: 10px;
-        margin-top: 30px;
+        margin-top: 10px;
     }
     p{
         font-size: 14px;
@@ -137,6 +151,19 @@
         width: 100%;
         height: auto;
     }
+    .list{
+        margin-top: 15px;
+        margin-bottom: 30px;
+    h3{
+        font-size: 14px;
+        font-weight: 400;
+        color: #5F5F5F;
+        img{
+            width: 4%;
+            margin-right: 10px;
+        }
+    }
+}
 }
 
 .startups{
@@ -144,11 +171,12 @@
     padding-bottom: 50px;
     background-color: #F8F8F8;
     .row{
-        margin-bottom: 50px;
+        margin-bottom: 30px;
     }
     h1{
         font-size: 34px;
         font-weight: 400;
+        margin-bottom: -20px;
     }
     h2{
         font-size: 20px;
@@ -169,17 +197,31 @@
         background-color: #000;
         color: #ffffff;
     }
+    .list{
+        margin-top: 15px;
+        margin-bottom: 30px;
+    h3{
+        font-size: 14px;
+        font-weight: 400;
+        color: #5F5F5F;
+        img{
+            width: 4%;
+            margin-right: 10px;
+        }
+    }
+}
 }
 
 .mobile-apps{
     padding-top: 50px;
     padding-bottom: 50px;
     .row{
-        margin-bottom: 50px;
+        margin-bottom: 30px;
     }
     h1{
         font-size: 34px;
         font-weight: 400;
+        margin-bottom: -20px;
     }
     h2{
         font-size: 20px;
@@ -200,7 +242,7 @@
 
 .enterprise-app{
     padding-top: 50px;
-    padding-bottom: 50px;
+    //padding-bottom: 50px;
     background-color: #F8F8F8;
     h1{
         font-size: 34px;
@@ -210,7 +252,7 @@
         font-size: 20px;
         font-weight: 400;
         margin-bottom: 10px;
-        margin-top: 30px;
+        margin-top: 10px;
     }
     p{
         font-size: 14px;
@@ -226,6 +268,19 @@
         width: 100%;
         height: auto;
     }
+    .list{
+        margin-top: 15px;
+        margin-bottom: 30px;
+    h3{
+        font-size: 14px;
+        font-weight: 400;
+        color: #5F5F5F;
+        img{
+            width: 4%;
+            margin-right: 10px;
+        }
+    }
+}
 }
 
 .info-portals{
@@ -239,7 +294,7 @@
         font-size: 20px;
         font-weight: 400;
         margin-bottom: 10px;
-        margin-top: 30px;
+        margin-top: 10px;
     }
     p{
         font-size: 14px;
@@ -255,6 +310,19 @@
         width: 100%;
         height: auto;
     }
+    .list{
+        margin-top: 15px;
+        margin-bottom: 30px;
+    h3{
+        font-size: 14px;
+        font-weight: 400;
+        color: #5F5F5F;
+        img{
+            width: 4%;
+            margin-right: 10px;
+        }
+    }
+}
 }
 
 .our-process{
