cater page changes

--- a/src/app/components/cater/cater.component.html
+++ b/src/app/components/cater/cater.component.html
@@ -27,7 +27,7 @@
       <div class="container">
             <div class="row">
                   <div class="col-md-12">
-                        <h1>DIGITAL TRANSFORMATION</h1>
+                        <h1>Digital Transformation</h1>
                   </div>
             </div>
             <div class="row">
@@ -82,7 +82,7 @@
       <div class="container">
             <div class="row">
                   <div class="col-md-12">
-                        <h1>PRODUCT DEVELOPMENT</h1>
+                        <h1>Product Development</h1>
                   </div>
             </div>
             <div class="row">
@@ -121,7 +121,7 @@
       <div class="container">
             <div class="row">
                   <div class="col-md-12">
-                        <h1>START-UPS</h1>
+                        <h1>Start-Ups</h1>
                   </div>
             </div>
             <div class="row">
@@ -187,7 +187,7 @@
       <div class="container">
             <div class="row">
                   <div class="col-md-12">
-                        <h1>MOBILE APPS</h1>
+                        <h1>Mobile Apps</h1>
                   </div>
             </div>
             <div class="row">
@@ -228,7 +228,7 @@
       <div class="container">
             <div class="row">
                   <div class="col-md-12">
-                        <h1>ENTERPRISE APPLICATION</h1>
+                        <h1>Enterprise Application</h1>
                   </div>
             </div>
             <div class="row">
@@ -262,7 +262,7 @@
       <div class="container">
             <div class="row">
                   <div class="col-md-12">
-                        <h1>INFORMATION PORTALS</h1>
+                        <h1>Information Portals</h1>
                   </div>
             </div>
             <div class="row">
@@ -297,7 +297,7 @@
       <div class="container">
             <div class="row">
                   <div class="col-md-12">
-                        <h1>OUR PROCESS</h1>
+                        <h1>Our Process</h1>
                   </div>
             </div>
             <div class="row">
