--- a/src/app/components/services/usability-testing/usability-testing.component.html
+++ b/src/app/components/services/usability-testing/usability-testing.component.html
@@ -192,7 +192,7 @@
         </div>
         <div class="col-md-10">
           <h3>Test Report</h3>
-          <p>Summary of outcome are comparitively reported</p>
+          <p>Summary of outcome are comparitively reported to the business team</p>
         </div>
       </div>
       <div class="row">
@@ -201,7 +201,7 @@
         </div>
         <div class="col-md-10">
           <h3>Recommendations</h3>
-          <p>Recommendations and feature enhancements based on the user expectations are reported to the business team</p>
+          <p>Recommendations and feature enhancements based on the user expectations for further iterations</p>
         </div>
       </div>
     </div>
